# reqs

./: .gitignore  .gitmodules  404.html  CNAME  Cargo.toml  Dockerfile  README.md  REFACTORING.md  index.html  patch_client.py  robots.txt  search_index.en.js  sitemap.xml
.github/workflows/: cd-homebrew-tap.yml  cd-release-asset.yml  cd-release.yml  cd-zola.yml
benches/: client_benchmark.rs
docs/: README.md  config.toml
docs/content/: _index.md
docs/content/get_started/examples/: index.md
docs/content/get_started/installation/: index.md
docs/content/get_started/usage/: index.md
docs/content/mcp_mode/: _index.md
docs/content/mcp_mode/integration/: index.md
docs/content/mcp_mode/overview/: index.md
get_started/: index.html
get_started/examples/: index.html
get_started/installation/: index.html
get_started/usage/: index.html
mcp_mode/: index.html
mcp_mode/integration/: index.html
mcp_mode/overview/: index.html
src/: constants.rs  main.rs  processor.rs  types.rs
src/filter/: mod.rs
src/http/: client.rs  headers.rs  mod.rs  request.rs
src/mcp/: mod.rs  server.rs
src/output/: formatter.rs  mod.rs
src/utils/: delay.rs  html.rs  mod.rs  url.rs
tests/: test_headers.rs
