[package]
name = "reqs"
version = "0.0.1"
edition = "2024"
authors = ["hahwul"]
description = "Reqs is a command-line tool for massive sending requests"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "time"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
colored = "2"
