[package]
name = "reqs"
version = "0.1.0"
edition = "2024"
authors = ["hahwul"]
description = "Reqs is a command-line tool for massive sending requests"
license = "MIT"

[dependencies]
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full", "time"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
colored = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
rust-mcp-sdk = "0.7"
async-trait = "0.1"
scraper = "0.19.0"
